Bug 103026 - VIEWING: text in EMF images in DOC is no longer displayed after invalid line dash set
Summary: VIEWING: text in EMF images in DOC is no longer displayed after invalid line ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3 target:5.1....
Keywords: bibisected, bisected, regression
: 80503 (view as bug list)
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2016-10-05 22:17 UTC by Xisco Faulí
Modified: 2016-11-11 11:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-10-05 22:17:11 UTC
Description:
This is a bug for the text no displayed in the image. The lines not being displayed is covered by bug 80503

Steps to Reproduce:
1. Open attachment 110322 [details] from bug 80503
2. Check the image in the document

Actual Results:  
No text is displayed

Expected Results:
Text should be displayed. 


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:47.0) Gecko/20100101 Firefox/47.0
Comment 1 Xisco Faulí 2016-10-05 22:27:00 UTC
Regression introduced by

author	Caolán McNamara <caolanm@redhat.com>	2014-12-07 11:52:14 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2014-12-07 14:17:00 (GMT)
commit 4ac876084bb89b6460b31e090a666b395f66b1e8 (patch)
tree dd8652d4fbf83141ce15c0bf95c9a9b193079cd3
parent 5e59fe98ce4b29dd75e9d484a7f0d43b575709e8 (diff)

mpSurface->getCairo() == mpCairo

so make that clearer, and we only need to pass a Cairo context
not a surface here

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2016-10-06 08:35:37 UTC
Seems that the problem is that there is an CAIRO_STATUS_INVALID_DASH error on the context, so the drawing of text is skipped. Prior to the above change the context was thrown away and new one created so the already existing error on the context on entering the test drawing wasn't a problem
Comment 3 Commit Notification 2016-10-06 08:59:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5d355e9c9cbc94eede8f438895e192d834f7096

Resolves: tdf#103026 invalid dash causes CAIRO_STATUS_INVALID_DASH state

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2016-10-06 09:04:17 UTC
So the key problem is the same as bug 80503, the w scaling introduced by

author	Jan Holesovsky <kendy@collabora.com>	2013-11-27 12:11:04 (GMT)
committer	Jan Holesovsky <kendy@collabora.com>	2013-11-27 12:11:59 (GMT)
commit 843b211820075fceefe94a3bd73612ae7539361b (patch)
tree c93f73d7bd4ffe3974fd56c83253f9d54b3918c7
parent ec746c830c4ce86e446b929a88a3376a51871314 (diff)

cairo canvas: Line dashing size depends on the line width.

might be 0, which leads to all dashes of 0 which makes cairo set CAIRO_STATUS_INVALID_DASH state and refuse to do any more drawing.

5-2 and 5-1 backports in gerrit
Comment 5 Caolán McNamara 2016-10-06 09:05:21 UTC
*** Bug 80503 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2016-10-06 11:02:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc3d4c5358b03244177b08a13268c7922ab5f4a5&h=libreoffice-5-2

Resolves: tdf#103026 invalid dash causes CAIRO_STATUS_INVALID_DASH state

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-10-06 11:02:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=91e0a73984f72e0f04e6087524332f6354f627d0&h=libreoffice-5-1

Resolves: tdf#103026 invalid dash causes CAIRO_STATUS_INVALID_DASH state

It will be available in 5.1.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-10-18 07:49:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9f8d834bbbe77eb5fd5cc267ea518e6a8d1b827&h=libreoffice-5-1-6

Resolves: tdf#103026 invalid dash causes CAIRO_STATUS_INVALID_DASH state

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.