Resolves: tdf#103026 invalid dash causes CAIRO_STATUS_INVALID_DASH state

(cherry picked from commit c5d355e9c9cbc94eede8f438895e192d834f7096)

Change-Id: I072635ff7c67022ebfd5bdb475e390f3aab7a51c